Add HATEOAS links and paging to data models (#227)
* Add cursor support for APIs

* Add HATEOS to generated management APIs

* management version and changelog

* Add HATEOAS to authorize APIs

* Add HATEOAS to credentials APIs

* Add HATEOAS to mfa APIs

* Add HATEOAS to risk APIs

* Add HATEOAS to verify APIs
