# management/model_identity_provider_client_id_client_secret.go
@@ -19,7 +19,7 @@ var _ MappedNullable = &IdentityProviderClientIDClientSecret{}
 
 // IdentityProviderClientIDClientSecret struct for IdentityProviderClientIDClientSecret
 type IdentityProviderClientIDClientSecret struct {
-	Links map[string]interface{} `json:"_links,omitempty"`
+	Links *LinksHATEOAS `json:"_links,omitempty"`
 	// The description of the IdP.
 	Description *string `json:"description,omitempty"`
 	// The current enabled state of the IdP.
@@ -66,19 +66,19 @@ func NewIdentityProviderClientIDClientSecretWithDefaults() *IdentityProviderClie
 }
 
 // GetLinks returns the Links field value if set, zero value otherwise.
-func (o *IdentityProviderClientIDClientSecret) GetLinks() map[string]interface{} {
+func (o *IdentityProviderClientIDClientSecret) GetLinks() LinksHATEOAS {
 	if o == nil || IsNil(o.Links) {
-		var ret map[string]interface{}
+		var ret LinksHATEOAS
 		return ret
 	}
-	return o.Links
+	return *o.Links
 }
 
 // GetLinksOk returns a tuple with the Links field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IdentityProviderClientIDClientSecret) GetLinksOk() (map[string]interface{}, bool) {
+func (o *IdentityProviderClientIDClientSecret) GetLinksOk() (*LinksHATEOAS, bool) {
 	if o == nil || IsNil(o.Links) {
-		return map[string]interface{}{}, false
+		return nil, false
 	}
 	return o.Links, true
 }
@@ -92,9 +92,9 @@ func (o *IdentityProviderClientIDClientSecret) HasLinks() bool {
 	return false
 }
 
-// SetLinks gets a reference to the given map[string]interface{} and assigns it to the Links field.
-func (o *IdentityProviderClientIDClientSecret) SetLinks(v map[string]interface{}) {
-	o.Links = v
+// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
+func (o *IdentityProviderClientIDClientSecret) SetLinks(v LinksHATEOAS) {
+	o.Links = &v
 }
 
 // GetDescription returns the Description field value if set, zero value otherwise.
