# mfa/model_fido_policy.go
@@ -20,6 +20,7 @@ var _ MappedNullable = &FIDOPolicy{}
 
 // FIDOPolicy struct for FIDOPolicy
 type FIDOPolicy struct {
+	Links *LinksHATEOAS `json:"_links,omitempty"`
 	// FIDO policy's UUID.
 	Id *string `json:"id,omitempty"`
 	// The time the resource was created.
@@ -64,6 +65,38 @@ func NewFIDOPolicyWithDefaults() *FIDOPolicy {
 	var enforceDuringAuthentication bool = false
 	this.EnforceDuringAuthentication = &enforceDuringAuthentication
 	return &this
+}
+
+// GetLinks returns the Links field value if set, zero value otherwise.
+func (o *FIDOPolicy) GetLinks() LinksHATEOAS {
+	if o == nil || IsNil(o.Links) {
+		var ret LinksHATEOAS
+		return ret
+	}
+	return *o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FIDOPolicy) GetLinksOk() (*LinksHATEOAS, bool) {
+	if o == nil || IsNil(o.Links) {
+		return nil, false
+	}
+	return o.Links, true
+}
+
+// HasLinks returns a boolean if a field has been set.
+func (o *FIDOPolicy) HasLinks() bool {
+	if o != nil && !IsNil(o.Links) {
+		return true
+	}
+
+	return false
+}
+
+// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
+func (o *FIDOPolicy) SetLinks(v LinksHATEOAS) {
+	o.Links = &v
 }
 
 // GetId returns the Id field value if set, zero value otherwise.
@@ -436,6 +469,9 @@ func (o FIDOPolicy) MarshalJSON() ([]byte, error) {
 
 func (o FIDOPolicy) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Links) {
+		toSerialize["_links"] = o.Links
+	}
 	// skip: id is readOnly
 	// skip: createdAt is readOnly
 	// skip: updatedAt is readOnly
