# risk/model_risk_predictor_custom.go
@@ -20,6 +20,7 @@ var _ MappedNullable = &RiskPredictorCustom{}
 
 // RiskPredictorCustom struct for RiskPredictorCustom
 type RiskPredictorCustom struct {
+	Links *LinksHATEOAS `json:"_links,omitempty"`
 	// A string that specifies the resource’s unique identifier.
 	Id *string `json:"id,omitempty"`
 	// A string type. A unique, friendly name for the predictor. This name is displayed in the Risk Policies UI, when the admin is asked to define the overrides and weights.
@@ -61,6 +62,38 @@ func NewRiskPredictorCustom(name string, compactName string, type_ EnumPredictor
 func NewRiskPredictorCustomWithDefaults() *RiskPredictorCustom {
 	this := RiskPredictorCustom{}
 	return &this
+}
+
+// GetLinks returns the Links field value if set, zero value otherwise.
+func (o *RiskPredictorCustom) GetLinks() LinksHATEOAS {
+	if o == nil || IsNil(o.Links) {
+		var ret LinksHATEOAS
+		return ret
+	}
+	return *o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *RiskPredictorCustom) GetLinksOk() (*LinksHATEOAS, bool) {
+	if o == nil || IsNil(o.Links) {
+		return nil, false
+	}
+	return o.Links, true
+}
+
+// HasLinks returns a boolean if a field has been set.
+func (o *RiskPredictorCustom) HasLinks() bool {
+	if o != nil && !IsNil(o.Links) {
+		return true
+	}
+
+	return false
+}
+
+// SetLinks gets a reference to the given LinksHATEOAS and assigns it to the Links field.
+func (o *RiskPredictorCustom) SetLinks(v LinksHATEOAS) {
+	o.Links = &v
 }
 
 // GetId returns the Id field value if set, zero value otherwise.
@@ -425,6 +458,9 @@ func (o RiskPredictorCustom) MarshalJSON() ([]byte, error) {
 
 func (o RiskPredictorCustom) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Links) {
+		toSerialize["_links"] = o.Links
+	}
 	// skip: id is readOnly
 	toSerialize["name"] = o.Name
 	toSerialize["compactName"] = o.CompactName
